--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -11,6 +11,12 @@ python = "^3.9"
 requests = "^2.31.0"
 pydantic = {extras = ["email"], version = "^2.6.3"}
 
+[tool.poetry.group.dev.dependencies]
+pylint = "^3.1.0"
+black = "^24.2.0"
+flake8 = "^7.0.0"
+isort = "^5.13.2"
+mypy = "^1.8.0"
 
 [build-system]
 requires = ["poetry-core"]
