--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,23 @@
 [tool.poetry]
-name = "api"
+name = "ontologies-explorer"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["lnmylos <>", "Goldensteev <fletcher.steven@hotmail.fr>"]
 readme = "README.md"
-package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.9"
 requests = "^2.31.0"
 pydantic = {extras = ["email"], version = "^2.6.3"}
 
+
 [tool.poetry.group.dev.dependencies]
-pylint = "^3.1.0"
 black = "^24.2.0"
 flake8 = "^7.0.0"
 isort = "^5.13.2"
 mypy = "^1.8.0"
+pylint = "^3.1.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
