--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 requests = "^2.31.0"
+PyYAML = "^6.0.1"
 pydantic = {extras = ["email"], version = "^2.6.3"}
 
 
