--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9"
 requests = "^2.31.0"
 PyYAML = "^6.0.1"
 pydantic = {extras = ["email"], version = "^2.6.3"}
+pytest = "^8.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
