code searching function

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,5 +2,5 @@ fhir_api_base: "https://smt.esante.gouv.fr/fhir/"
 endpoints:
   list_vs: "ValueSet?_summary=true"
   list_cs: "CodeSystem?_summary=true"
-  search_term: "ValueSet/$expand?url={}&term={}"
+  search_term: "ValueSet/$expand?url={}&filter={}"
   search_code: "CodeSystem/$lookup?system={}&code={}"
